# HW2_AI_Agent_Debate

./: .env-example  .gitignore  PROMPTS.md  README.md  pyproject.toml
config/: debate.json  motions.json
config/prompts/: verdict.schema.json
docs/: PLAN_HW2.md  PRD_HW2.md  TODO_HW2.md  session_demo.md
runs/: .gitkeep
src/debate/: __init__.py  __main__.py  cli_args.py  cli_config.py  cli_output.py  main.py  provider_child_env.py  provider_factory.py
src/debate/agents/: __init__.py  base_agent.py  base_agent_handlers.py  con_agent.py  debater_agent.py  pro_agent.py  prompting.py  reply_format.py
src/debate/config/: __init__.py  settings.py
src/debate/gatekeeper/: __init__.py  gatekeeper.py
src/debate/ipc/: __init__.py  channel.py  messages.py
src/debate/judge/: __init__.py  judge.py
src/debate/orchestration/: __init__.py  fsm_dispatch.py  ipc.py  judge.py  judge_bookkeeping.py  judge_logging.py  judge_phases.py  judge_scoring.py  judge_tool_calls.py  judge_turns.py  judge_types.py  state_machine.py  supervisor.py  supervisor_env.py  supervisor_errors.py  supervisor_io.py  verdict_parse.py  verdict_pipeline.py  verdict_tiebreak.py  watchdog.py  watchdog_check.py  watchdog_types.py
tests/: conftest.py  test_smoke.py
tests/integration/: __init__.py  echo_child.py  heartbeat_child.py  test_e2e_debate.py  test_judge_debate_flow.py  test_recovery_chaos.py  test_supervisor_smoke.py
tests/unit/: test_base_agent.py  test_cli.py  test_config.py  test_debater_agent.py  test_gatekeeper.py  test_housekeeping.py  test_ipc.py  test_judge_agent.py  test_llm_client.py  test_logger.py  test_real_llm_client.py  test_real_search_client.py  test_redaction.py  test_router_cache.py  test_schemas.py  test_search_client.py  test_secrets.py  test_state_machine.py  test_supervisor.py  test_transcript_log.py  test_verdict_schema.py  test_watchdog.py
(+24 files in other folders)
