[project]
name = "debate"
version = "0.1.0"
description = "HW2 - Multi-agent AI Debate system (Pro vs Con, with Gatekeeper, Watchdog, and Judge)"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Student" },
]
dependencies = [
    "python-dotenv>=1.0.1",
    "pydantic>=2.6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.5.0",
]

[project.scripts]
debate = "debate.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/debate"]

[tool.hatch.build.targets.sdist]
include = ["src/debate"]

# --- dependency groups (PEP 735) --------------------------------------------
# Replaces the deprecated [tool.uv].dev-dependencies table.
# `uv sync` installs the `dev` group by default.
[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.5.0",
]

# --- pytest -----------------------------------------------------------------
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
pythonpath = ["src"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
]
asyncio_mode = "auto"

# --- ruff -------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "SIM", # flake8-simplify
]
ignore = [
    "E501", # line too long (handled by formatter)
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["F401", "F811"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
